# genesis-auditor

./: .gitignore  README.md  genesis-auditor.cabal  stack.yaml
app/: Main.hs
src/: CLI.hs  Checks.hs  Lib.hs  Types.hs
src/Checks/: Balance.hs  CanonicalJSON.hs  Delegation.hs  DuplicateKeys.hs  Types.hs  VssCerts.hs
