name:                genesis-auditor
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/input-output-hk/genesis-auditor#readme
license:             BSD3
license-file:        LICENSE
author:              IOHK Engineering Team
maintainer:          operations@iohk.io
copyright:           2017 Input Output Hong Kong
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Types
                       CLI
                       Checks
  other-modules:       Checks.CanonicalJSON
                       Checks.VssCerts
                       Checks.Types
  build-depends:         base >= 4.7 && < 5
                       , aeson
                       , canonical-json
                       , cryptonite
                       , memory
                       , optparse-applicative
                       , mtl
                       , transformers
                       , string-conv
                       , bytestring
  default-language:    Haskell2010

executable genesis-auditor
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , genesis-auditor
                     , optparse-applicative
                     , transformers
  default-language:    Haskell2010

test-suite genesis-auditor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , genesis-auditor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/input-output-hk/genesis-auditor
